@@ -18,6 +18,7 @@
 #include <yarp/ShmemCarrier.h>
 #include <yarp/LocalCarrier.h>
 #include <yarp/NameserCarrier.h>
+#include <yarp/HttpCarrier.h>
 
 using namespace yarp;
 
@@ -27,8 +28,9 @@ static Logger carriersLog("Carriers", Logger::get());
 Carriers yarp::Carriers::instance;
 
 Carriers::Carriers() {
-    delegates.push_back(new LocalCarrier()); // not solid yet
+    delegates.push_back(new HttpCarrier());
     delegates.push_back(new NameserCarrier());
+    delegates.push_back(new LocalCarrier()); // not solid yet
     delegates.push_back(new ShmemCarrier());
     delegates.push_back(new TcpCarrier());
     delegates.push_back(new McastCarrier());
